--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,9 @@ h2 {
   color: white;
   font-family: "Helvetica Neue ME";
 }
+
+img {
+  display: flex;
+  align-items: center;
+  height: 20vh;
+}
