--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,28 @@ p {
   justify-content: space-evenly;
   align-items: center;
 }
+
+.box-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25vh;
+}
+
+button {
+  width: 20vw;
+  height: 8vh;
+  font-size: 1.5vw;
+  text-transform: uppercase;
+  text-align: center;
+  border: solid;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+button:hover {
+  color: white;
+  opacity: 2;
+}
