--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+@import url(//db.onlinewebfonts.com/c/95cecf452d3208890088a5b4c19c7ecf?family=Helvetica + Neue + ME);
+@font-face {
+  font-family: "Helvetica Neue ME";
+  src: url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.eot");
+  src: url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/95cecf452d3208890088a5b4c19c7ecf.svg#Helvetica Neue ME")
+      format("svg");
+}
+
 .logo {
   height: 20vh;
   padding-top: 2vh;
