--- a/src/styles.css
+++ b/src/styles.css
@@ -42,8 +42,8 @@ body {
   background-color: black;
 }
 
-h2 {
-  font-size: 2.5vw;
+.subtext {
+  font-size: 1.5vw;
   text-align: center;
   letter-spacing: 0.3vw;
   padding-bottom: 4vh;
@@ -53,8 +53,10 @@ h2 {
 
 .box-img {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
   height: 20vh;
+  margin-left: 2vw;
   cursor: pointer;
 }
 
@@ -82,9 +84,9 @@ p {
 }
 
 .perfil-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  display: inline-block;
+  border: solid;
+  margin-left: 6vw;
 }
 
 .box-button {
